Redirecionamento das paginas e nova organização das pastas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -15,6 +15,6 @@ file.reference.APS_daweb-public_html=public_html
 file.reference.APS_daweb-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.APS_daweb-public_html}
-start.file=index.html
+start.file=ArquivosHTML/index.html
 test.folder=${file.reference.APS_daweb-test}
 web.context.root=/APS_daweb
